--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -2,8 +2,8 @@
   <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
 </div>
 
-<div class="row-fluid post-full">
-  <div class="span12">
+<div class="row post-full">
+  <div class="col-md-12">
     <div class="date">
       <span>{{ page.date | date_to_long_string }}</span>
     </div>
@@ -28,12 +28,12 @@
   {% endunless %}  
 
     <hr>
-    <div class="pagination">
+    <div class="pager">
       <ul>
       {% if page.previous %}
-        <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
+        <li class="previous"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
       {% else %}
-        <li class="prev disabled"><a>&larr; Previous</a></li>
+        <li class="previous disabled"><a>&larr; Previous</a></li>
       {% endif %}
         <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a></li>
       {% if page.next %}
