--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -18,7 +18,8 @@
 
     <!-- Le styles -->
     <link href="//ajax.aspnetcdn.com/ajax/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+    <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" media="all">
     <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.0.min.js"></script>
     <script src="//ajax.aspnetcdn.com/ajax/bootstrap/3.1.1/bootstrap.min.js"></script>
 
@@ -27,7 +28,7 @@
       <link rel="shortcut icon" href="images/favicon.ico">
       <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
       <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-      <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+      <link rel="apple-touch-icon" sizes="112x114" href="images/apple-touch-icon-112x114.png">
     -->
 
     <!-- atom & rss feed -->
@@ -68,14 +69,28 @@
             {{ content }}
         </main>
         <aside class="col-md-3">
-            <h4>horace.li / horaceli.com</h4>
-            <a href="https://www.facebook.com/horaceli/"><i class="fa fa-facebook"></i></a>
-            <a href="https://twitter.com/horaceli/"><i class="fa fa-twitter"></i></a>
-            <a href="https://www.linkedin.com/in/horacehhli/"><i class="fa fa-linkedin"></i></a>
-            <a href="https://plus.google.com/+HoraceLi/"><i class="fa fa-google-plus"></i></a>
-            <a href="https://github.com/horaceli/"><i class="fa fa-github"></i></a>
-            <a href="https://www.flickr.com/photos/horaceli/"><i class="fa fa-flickr"></i></a>
-            <a href="http://instagram.com/apfel912/"><i class="fa fa-instagram"></i></a>
+            <h4>Horace Li</h4>
+
+            <p>
+                <img src="https://s.gravatar.com/avatar/da368882b7997eaa6c11c80b3ab7f276?s=80">
+            </p>
+
+            <p class="text-justify">
+                I am a developer and CS student.
+            </p>
+
+            <p>
+                Contact me <a href="https://twitter.com/horaceli/">@horaceli</a> or <a href="mailto:me@horaceli.com">me@horaceli.com</a>.
+            </p>
+
+            <section>
+                <a href="https://www.linkedin.com/in/horacehhli/"><i class="fa fa-fw fa-2x fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/horaceli/"><i class="fa fa-fw fa-2x fa-facebook"></i></a>
+                <a href="https://twitter.com/horaceli/"><i class="fa fa-fw fa-2x fa-twitter"></i></a>
+                <a href="https://plus.google.com/+HoraceLi/"><i class="fa fa-fw fa-2x fa-google-plus"></i></a>
+                <a href="https://github.com/horaceli/"><i class="fa fa-fw fa-2x fa-github"></i></a>
+                <a href="https://www.flickr.com/photos/horaceli/"><i class="fa fa-fw fa-2x fa-flickr"></i></a>
+            </section>
         </aside>
     </div>
     <hr>
