--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -1,49 +1,56 @@
 <div class="page-header">
-  <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
+    <h1>
+        {{ page.title }}
+        {% if page.tagline %}
+        <small>{{page.tagline}}</small>
+        {% endif %}
+    </h1>
 </div>
 
 <div class="row post-full">
-  <div class="col-md-12">
-    <div class="date">
-      <span>{{ page.date | date_to_long_string }}</span>
+    <div class="col-md-12">
+        <div class="date">
+            <span>{{ page.date | date_to_long_string }}</span>
+        </div>
+        <article class="content">
+            {{ content }}
+        </article>
+
+        {% unless page.categories == empty %}
+        <ul class="tag_box inline">
+            <li><i class="icon-folder-open"></i></li>
+            {% assign categories_list = page.categories %}
+            {% include JB/categories_list %}
+        </ul>
+        {% endunless %}
+
+        {% unless page.tags == empty %}
+        <ul class="tag_box inline">
+            <li><i class="icon-tags"></i></li>
+            {% assign tags_list = page.tags %}
+            {% include JB/tags_list %}
+        </ul>
+        {% endunless %}
+
+        <hr>
+        <div class="pager">
+            <ul>
+                {% if page.previous %}
+                <li class="previous"><a href="{{ BASE_PATH }}{{ page.previous.url }}"
+                                        title="{{ page.previous.title }}">&larr; Previous</a></li>
+                {% else %}
+                <li class="previous disabled"><a>&larr; Previous</a></li>
+                {% endif %}
+                <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a></li>
+                {% if page.next %}
+                <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}"
+                                    title="{{ page.next.title }}">Next &rarr;</a></li>
+                {% else %}
+                <li class="next disabled"><a>Next &rarr;</a>
+                    {% endif %}
+            </ul>
+        </div>
+        <hr>
+        {% include JB/comments %}
     </div>
-    <article class="content">
-      {{ content }}
-    </article>
-
-  {% unless page.categories == empty %}
-    <ul class="tag_box inline">
-      <li><i class="icon-folder-open"></i></li>
-      {% assign categories_list = page.categories %}
-      {% include JB/categories_list %}
-    </ul>
-  {% endunless %}  
-
-  {% unless page.tags == empty %}
-    <ul class="tag_box inline">
-      <li><i class="icon-tags"></i></li>
-      {% assign tags_list = page.tags %}
-      {% include JB/tags_list %}
-    </ul>
-  {% endunless %}  
-
-    <hr>
-    <div class="pager">
-      <ul>
-      {% if page.previous %}
-        <li class="previous"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
-      {% else %}
-        <li class="previous disabled"><a>&larr; Previous</a></li>
-      {% endif %}
-        <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a></li>
-      {% if page.next %}
-        <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
-      {% else %}
-        <li class="next disabled"><a>Next &rarr;</a>
-      {% endif %}
-      </ul>
-    </div>
-    <hr>
-    {% include JB/comments %}
-  </div>
 </div>
