--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -75,12 +75,12 @@
                 <img src="https://s.gravatar.com/avatar/da368882b7997eaa6c11c80b3ab7f276?s=80">
             </p>
 
-            <p class="text-justify">
-                I am a developer and CS student.
+            <p>
+                I'm a developer and CS student based in London. Apart from coding, I also do other <del>shit</del> <a href="{{ BASE_PATH }}/about.html">stuff</a>.
             </p>
 
             <p>
-                Contact me <a href="https://twitter.com/horaceli/">@horaceli</a> or <a href="mailto:me@horaceli.com">me@horaceli.com</a>.
+
             </p>
 
             <section>
