--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -75,8 +75,8 @@
                 <img src="https://s.gravatar.com/avatar/da368882b7997eaa6c11c80b3ab7f276?s=80">
             </p>
 
-            <p>
-                I'm a developer and CS student based in London. Apart from coding, I also do other <del>shit</del> <a href="{{ BASE_PATH }}/about.html">stuff</a>.
+            <p class="text-justify">
+                I'm a developer and CS student based in London. Apart from coding, I do <del>shit</del> <a href="{{ BASE_PATH }}/about.html">stuff</a>.
             </p>
 
             <p>
