Fixed comments and tags

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -19,7 +19,7 @@
     <!-- Le styles -->
     <link href="//ajax.aspnetcdn.com/ajax/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
-    <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" media="all">
+    <link href="{{ BASE_PATH }}/css/main.css" rel="stylesheet">
     <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.0.min.js"></script>
     <script src="//ajax.aspnetcdn.com/ajax/bootstrap/3.1.1/bootstrap.min.js"></script>
 
