--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -1,36 +1,38 @@
-<div class="page-header">
-    <h1>
-        {{ page.title }}
-        {% if page.tagline %}
-        <small>{{page.tagline}}</small>
-        {% endif %}
-    </h1>
-</div>
-
 <div class="row post-full">
     <div class="col-md-12">
+
+        <h1>
+            {{ page.title }}
+            {% if page.tagline %}
+            <small>{{page.tagline}}</small>
+            {% endif %}
+        </h1>
+
         <div class="date">
             <span>{{ page.date | date_to_long_string }}</span>
         </div>
-        <article class="content">
-            {{ content }}
-        </article>
+
+        <hr/>
 
         {% unless page.categories == empty %}
-        <ul class="tag_box inline">
-            <li><i class="icon-folder-open"></i></li>
+        <ul class="list-inline post-tags">
+            <li><i class="fa fa-folder-open"> </i></li>
             {% assign categories_list = page.categories %}
             {% include JB/categories_list %}
         </ul>
         {% endunless %}
 
         {% unless page.tags == empty %}
-        <ul class="tag_box inline">
-            <li><i class="icon-tags"></i></li>
+        <ul class="list-inline post-tags">
+            <li><i class="fa fa-tags"> </i></li>
             {% assign tags_list = page.tags %}
             {% include JB/tags_list %}
         </ul>
         {% endunless %}
+
+        <article class="content">
+            {{ content }}
+        </article>
 
         <hr>
         <div class="pager">
