--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -38,15 +38,19 @@
         <div class="pager">
             <ul>
                 {% if page.previous %}
-                <li class="previous"><a href="{{ BASE_PATH }}{{ page.previous.url }}"
-                                        title="{{ page.previous.title }}">&larr; Previous</a></li>
+                <li class="previous">
+                    <a href="{{ BASE_PATH }}{{ page.previous.url }}"
+                       title="{{ page.previous.title }}">&larr; Previous</a>
+                </li>
                 {% else %}
                 <li class="previous disabled"><a>&larr; Previous</a></li>
                 {% endif %}
                 <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a></li>
                 {% if page.next %}
-                <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}"
-                                    title="{{ page.next.title }}">Next &rarr;</a></li>
+                <li class="next">
+                    <a href="{{ BASE_PATH }}{{ page.next.url }}"
+                       title="{{ page.next.title }}">Next &rarr;</a>
+                </li>
                 {% else %}
                 <li class="next disabled"><a>Next &rarr;</a>
                     {% endif %}
