Minor theme change, updated 'about'

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -41,7 +41,7 @@
 
 <body>
 
-<div class="navbar navbar-default navbar-static-top" role="navigation">
+<div class="navbar navbar-default navbar-static-top navbar-inverse" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -76,7 +76,7 @@
             </p>
 
             <p class="text-justify">
-                I'm a developer and CS student based in London. Apart from coding, I do <del>shit</del> <a href="{{ BASE_PATH }}/about.html">stuff</a>.
+                I'm a developer and CS student based in London. <a href="{{ BASE_PATH }}/about.html">See more</a>
             </p>
 
             <p>
