--- a/_includes/themes/twitter/excerpt.html
+++ b/_includes/themes/twitter/excerpt.html
@@ -33,7 +33,7 @@
 
             {{ post.content | split:'<!--more-->' | first }}
 
-            <p><a href="{{ post.url }}">Continue reading</a></p>
+            <p><a href="{{ post.url }}">Continue...</a></p>
 
             {% else %}
 
