--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -16,16 +16,15 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <!-- Le styles -->
+
+    <link rel="shortcut icon" href="{{ BASE_PATH }}/global/images/icon_032.png" type="image/png">
     <link href="//ajax.aspnetcdn.com/ajax/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
-    <link href="{{ BASE_PATH }}/css/main.css" rel="stylesheet">
+    <link href="{{ BASE_PATH }}/global/css/main.css" rel="stylesheet">
     <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.0.min.js"></script>
     <script src="//ajax.aspnetcdn.com/ajax/bootstrap/3.1.1/bootstrap.min.js"></script>
 
-    <!-- Le fav and touch icons -->
     <!-- Update these with your own images
-      <link rel="shortcut icon" href="images/favicon.ico">
       <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
       <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
       <link rel="apple-touch-icon" sizes="112x114" href="images/apple-touch-icon-112x114.png">
@@ -76,7 +75,7 @@
             </p>
 
             <p class="text-justify">
-                I'm a developer and CS student based in London. <a href="{{ BASE_PATH }}/about.html">See more</a>
+                I'm a developer and CS student based in London.
             </p>
 
             <p>
